--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/bootstrapvalidator/dist/js/bootstrapValidator.min.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script src="js/dashboardAjax.js"></script>
+ <!--<script src="js/dashboard.js"></script>-->   
+ <!--<script src="js/dashboardAjax.js"></script>-->   
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
