--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/bootstrapvalidator/dist/js/bootstrapValidator.min.js"></script>
- <!--<script src="js/dashboard.js"></script>-->   
- <!--<script src="js/dashboardAjax.js"></script>-->   
+    <script src="dal/requestsDal.js"></script>
+    <script src="requests/sessionRequests.js"></script>
+    <script src="js/main.js"></script>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/bootstrapvalidator/dist/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/login.css">
 
     <title>ParkHour</title>
 
@@ -25,7 +27,7 @@
             <div class="userInfoBox">
                 <img class="imgParkHourLogo" src="img/parkhourLogo.jpg"/> 
                 <div class="userLoginInfo">
-                    DATOS DEL USUARIO LOGUEADO
+                    <!--DATOS DEL USUARIO LOGUEADO-->
                 </div>
 
                 <button class= "btn btn-info btn-block" id="btnControlPanel">PANEL DE CONTROL</button>
@@ -50,6 +52,10 @@
                             <input class = "form-control" name="txtColorVehicleIn" type="text">
                        </div>
                         <div class="form-group">
+                            <label>Modelo</label>
+                            <input class = "form-control" name="txtModeloVehicleIn" type="text">
+                       </div>
+                        <div class="form-group">
                             <label>Marca</label>
                             <input class = "form-control" name="txtMarcaVehicleIn" type="text">
                        </div>
@@ -63,14 +69,10 @@
 
                     <div class="datosVehiculo"><!--MUESTRO DATOS DEL VEHICULO--></div>
 
-                    <div class ="btnCalcular col-sm-5 ">
-                        <button class= "btn btn-warning btn-block" id="btnVehicleCalc" disabled="true">CALCULAR</button>
-                    </div>
-
                     <div class="importeAPagar col-sm-5"><!--MUESTRO EL TOTAL A PAGAR POR LA ESTADIA--></div>
 
                     <div>
-                        <button class= "btn btn-danger btn-block" id="btnVehicleOut" disabled="true">SALIDA</button>
+                        <button class= "btn btn-danger btn-block" id="btnVehicleOut" disabled="true">EGRESO</button>
                     </div>
 
                 </div>
