--- a/login.html
+++ b/login.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>ParkHour Log In</title>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/bootstrapvalidator/dist/js/bootstrapValidator.min.js"></script>
+
+
     <script src="dal/requestsDal.js"></script>
     <script src="requests/sessionRequests.js"></script>
     <script src="js/login.js"></script>
 
+
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/bootstrapvalidator/dist/css/bootstrapValidator.min.css">
+
+
     <link rel="stylesheet" href="css/login.css">
 
 </head>
@@ -33,7 +39,7 @@
 			    	<form accept-charset="UTF-8" role="form">
                     <fieldset>
 			    	  	<div class="form-group">
-			    		    <input class="form-control" placeholder="Nombre de usuario" id="txtUserName" type="text" value="">
+			    		    <input class="form-control" placeholder="Nombre de usuario" id="txtUserName" type="text">
 			    		</div>
 			    		<div class="form-group">
 			    			<input class="form-control" placeholder="Contraseña" id="txtPassword" type="password">
