El sistema permite ingresar vehiculos

--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/bootstrapvalidator/dist/js/bootstrapValidator.min.js"></script>
 
-    <!--Tools-->
-    <script src="dal/requestsDal.js"></script>
-    <!--Tools-->
-
-
-    <!--Views-->
-    <script src="views/parkedVehicleTable.js"></script>
-    <script src="views/parkingInfoBox.js"></script>
-    <script src="views/parkingOutBox.js"></script>
-    <script src="views/placeFree.js"></script>
-    <!--Views-->
-
+    <script src="js/main.js"></script>
 
     <!--Requests-->
     <script src="requests/sessionRequests.js"></script>
@@ -31,8 +20,17 @@
     <script src="requests/placeRequests.js"></script>
     <!--Requests-->
 
+    <!--Tools-->
+    <script src="dal/requestsDal.js"></script>
+    <!--Tools-->
 
-    <script src="js/main.js"></script>
+    <!--Views-->
+    <script src="views/parkedVehicleTable.js"></script>
+    <script src="views/parkingInfoBox.js"></script>
+    <script src="views/parkingOutBox.js"></script>
+    <script src="views/placeFree.js"></script>
+    <script src="views/viewsGenerators.js"></script>
+    <!--Views-->
 
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
